--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 		<!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="js/jquery-3.3.1.min.js"></script>
@@ -58,7 +59,7 @@
               <span class="glyphicon glyphicon-chevron-left"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="right carousel-control w-100" href="#myCarousel" data-slide="next">
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
               <span class="glyphicon glyphicon-chevron-right"></span>
               <span class="sr-only">Next</span>
             </a>
@@ -100,7 +101,7 @@
     <div class="picture-section">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-6 w-100">
                     <h2 class="picture-section-heading">Standard Picture Section</h2>
                     <br>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ad, tempora incidunt accusantium. Similique magni quaerat beatae illo aliquid. Libero non ipsa nisi, corporis architecto incidunt rem repellendus asperiores numquam!</p>
@@ -185,6 +186,53 @@
     </div>
     
     <!-- Contact -->
-    
+    <div class="footer w-100">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="row">
+                    <div class="col-2 footer-logo w-100">
+                        <!-- <img src="img/uclogo.png" id="footer-image" alt="Image" class="img-fluid"> -->
+                    </div>
+                    <div class="footer-more col-9">
+                        <div class="row">
+                            MORE INFO
+                        </div>
+                        <div class="row footer-more-info">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </div>
+                        <div class="row">
+                            <!-- Social Buttons? 
+                            <a class="btn social-button"><span class="glyphicon glyphicon-envelope"></span></a>
+                            <a class="btn social-button"><span class="glyphicon glyphicon-envelope"></span></a>
+                            <a class="btn social-button"><span class="glyphicon glyphicon-envelope"></span></a>
+                            <a class="btn social-button"><span class="glyphicon glyphicon-envelope"></span></a>
+                            -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="row footer-contact">
+                    Contact
+                </div>
+                <div class="row footer-contact-list">
+                    <span class="glyphicon glyphicon-envelope">Contact Info 1<br> 
+                    <span class="glyphicon glyphicon-envelope">Contact Info 2<br> 
+                    <span class="glyphicon glyphicon-envelope">Contact Info 3<br>
+                    <span class="glyphicon glyphicon-envelope">Contact Info 4<br>
+                </div>
+            </div>
+        </div>
+        <div class="row copyright">
+            Copyright © 2018. University of the Cordilleras. All rights reserved.<br>
+            Governor Pack Road, Baguio City, Philippines 2600
+        </div>
+    </div>
+   
 </body>
 </html>
